WorkQueueMethods - counting mismatches